tests/fixtures/invalid/ord_3_args.py
# ord() takes at most 1 argument, got 3
x = ord(1, 1, 1)
